feat: notification cron job (#41)
